fix spacing in header

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -10,6 +10,7 @@ header {
   ul, li {
     display: inline-block;
   }
+
   #jumbotron img {
     width: 100%;
   } 
@@ -45,6 +46,10 @@ header {
     margin-top: 10px;
     font-size: 14px;
   }
+  div ul:first-of-type {
+    position: relative;
+    bottom: 5px;
+  }
 
   .shoppingcart { 
     margin-top: 5px;
@@ -67,23 +72,36 @@ header {
   #logo {
     display: block;
     margin-left: ($desktop-width - 250px) / 2;
+    margin-bottom: -45px;
+    margin-top: 20px;
     width: $desktop-width * (113px / 506px);
   }
 
   input {
     float:right;
+    padding-left: 7px;
     border: none;
-    width: (202px / $desktop-width) * $desktop-width;
-    height: (37px / $desktop-width) * $desktop-width;
+    width: (200px / $desktop-width) * $desktop-width;
+    height: (30px / $desktop-width) * $desktop-width;
     background-color: #f6f6f6;
     position: relative;
-    bottom: 37px;
+    bottom: -10px;
+  }
+
+  input + img {
+    float: right;
+    position: relative;
+    top: 17px;
+    left: 200px;
+  }
+  input:focus + img {
+    display: none;
   }
 
   .links {
     float: left;
     position: relative;
-    top: 39px;
+    top: 58px;
   }
   
   .links li {
@@ -99,18 +117,7 @@ header {
     clear: both;
     text-align: center;
   }
-  //#jumbotron div {
-  //  &:nth-of-type(2),
-  //  &:nth-of-type(3),
-  //  &:nth-of-type(4),
-  //  &:nth-of-type(5) {
-  //    width: 15px;
-  //    height: 15px;
-  //    margin: 10px 5px;
-  //    display: inline-block;
-  //    background-color: #b8b8b8;
-  //  }
-  //}
+
   #jumbotron img:nth-of-type(2) {
     width: $desktop-width;
   }
